Fix broken links

--- a/P1/src/shelter_detail_editable.html
+++ b/P1/src/shelter_detail_editable.html
@@ -385,120 +385,161 @@ If you have any questions, feel free to visit us or call us at 416-123-1234</tex
                             </div>
 
                         </a>
-
                         <!-- Card 1 -->
-                        <div class="max-h-max max-w-xs md:max-w-sm bg-white shadow rounded-lg mb-2
-                                    transition duration-300 ease-in-out hover:shadow-lg hover:opacity-80">
-                            <a href="./pet_detail.html">
-                                <div class="relative w-full h-56">
-                                    <img class="w-full h-full object-cover rounded-t-lg"
-                                         src="./resources/pets/DunDun2.png" alt="" />
-                                </div>
-                            </a>
-                            <div class="p-5 flex flex-col">
-                                <div class="flex justify-between">
-                                    <a href="#">
-                                        <h5 class="mb-2 text-xl font-semibold tracking-tight text-gray-900">DunDun</h5>
-                                    </a>
-                                    <div>
-                                <span class="bg-green-100 text-green-800 text-xs font-medium mr-2 px-2.5 py-0.5 rounded">Available</span>
+                        <div class="relative max-h-max max-w-xs md:max-w-sm bg-white shadow rounded-lg  mb-2">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor"
+                                class="absolute top-0 right-0 w-16 hover:cursor-pointer hover:scale-110 z-50">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M15 12H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" />
+                            </svg>
+                            <div class="transition duration-300 ease-in-out hover:shadow-lg hover:opacity-80">
+                                <a href="./pet_detail_shelter_view.html">
+                                    <div class="relative w-full h-56">
+                                        <img class="w-full h-full object-cover rounded-t-lg"
+                                            src="./resources/pets/DunDun2.png" alt="" />
                                     </div>
+                                </a>
+                                <div class="p-5 flex flex-col">
+                                    <div class="flex justify-between">
+                                        <a href="#">
+                                            <h5 class="mb-2 text-xl font-semibold tracking-tight text-gray-900">DunDun
+                                            </h5>
+                                        </a>
+                                        <div>
+                                            <span
+                                                class="bg-green-100 text-green-800 text-xs font-medium mr-2 px-2.5 py-0.5 rounded">Available</span>
+                                        </div>
+                                    </div>
+                                    <p class="text-medium text-gray-700">
+                                        Male &#8226 3 years </p>
+                                    <p class="text-medium text-gray-700">
+                                        Golden Doodle </p>
+                                    <p class="text-medium text-gray-700">
+                                        Toronto Adoption Center </p>
+                                    <p class="text-xs mt-2  text-gray-700">
+                                        December 31, 2022 </p>
                                 </div>
-                                <p class="text-medium text-gray-700">
-                                    Male &#8226 3 years </p>
-                                <p class="text-medium text-gray-700">
-                                    Golden Doodle </p>
-                                <p class="text-medium text-gray-700">
-                                    Toronto Adoption Center </p>
-                                <p class="text-xs mt-2  text-gray-700">
-                                    December 31, 2022 </p>
                             </div>
                         </div>
 
                         <!-- Card 2 -->
-                        <div class="max-h-max max-w-xs md:max-w-sm bg-white shadow rounded-lg mb-2
-                                    transition duration-300 ease-in-out hover:shadow-lg hover:opacity-80">
-                            <a href="./pet_detail.html">
-                                <div class="relative w-full h-56">
-                                    <img class="w-full h-full object-cover rounded-t-lg"
-                                         src="./resources/pets/boston_terrier.jpg" alt="" />
-                                </div>
-                            </a>
-                            <div class="p-5 flex flex-col">
-                                <div class="flex justify-between">
-                                    <a href="#">
-                                        <h5 class="mb-2 text-xl font-semibold tracking-tight text-gray-900">Terry</h5>
-                                    </a>
-                                    <div>
-                                        <span class="bg-green-100 text-green-800 text-xs font-medium mr-2 px-2.5 py-0.5 rounded">Available</span>
+                        <div class="relative max-h-max max-w-xs md:max-w-sm bg-white shadow rounded-lg  mb-2
+                          ">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor"
+                                class="absolute top-0 right-0 w-16 hover:cursor-pointer hover:scale-110 z-50">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M15 12H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" />
+                            </svg>
+                            <div class="transition duration-300 ease-in-out hover:shadow-lg hover:opacity-80">
+
+                                <a href="./pet_detail_shelter_view.html">
+                                    <div class="relative w-full h-56">
+                                        <img class="w-full h-full object-cover rounded-t-lg"
+                                            src="./resources/pets/boston_terrier.jpg" alt="" />
                                     </div>
+                                </a>
+                                <div class="p-5 flex flex-col">
+                                    <div class="flex justify-between">
+                                        <a href="#">
+                                            <h5 class="mb-2 text-xl font-semibold tracking-tight text-gray-900">Terry
+                                            </h5>
+                                        </a>
+                                        <div>
+                                            <span
+                                                class="bg-green-100 text-green-800 text-xs font-medium mr-2 px-2.5 py-0.5 rounded">Available</span>
+                                        </div>
+                                    </div>
+                                    <p class="text-medium text-gray-700">
+                                        Male &#8226 3 years </p>
+                                    <p class="text-medium text-gray-700">
+                                        Boston Terrier </p>
+                                    <p class="text-medium text-gray-700">
+                                        Toronto Adoption Center </p>
+                                    <p class="text-xs mt-2  text-gray-700">
+                                        December 30, 2022 </p>
                                 </div>
-                                <p class="text-medium text-gray-700">
-                                    Male &#8226 3 years </p>
-                                <p class="text-medium text-gray-700">
-                                    Boston Terrier </p>
-                                <p class="text-medium text-gray-700">
-                                    Toronto Adoption Center </p>
-                                <p class="text-xs mt-2  text-gray-700">
-                                    December 30, 2022 </p>
                             </div>
                         </div>
 
                         <!-- Card 3 -->
-                        <div class="max-h-max max-w-xs md:max-w-sm bg-white shadow rounded-lg mb-2
-                                    transition duration-300 ease-in-out hover:shadow-lg hover:opacity-80">
-                            <a href="./pet_detail.html">
-                                <div class="relative w-full h-56">
-                                    <img class="w-full h-full object-cover rounded-t-lg"
-                                         src="./resources/pets/cat.jpg" alt="" />
-                                </div>
-                            </a>
-                            <div class="p-5 flex flex-col">
-                                <div class="flex justify-between">
-                                    <a href="#">
-                                        <h5 class="mb-2 text-xl font-semibold tracking-tight text-gray-900">Betsy</h5>
-                                    </a>
-                                    <div>
-                                        <span class="bg-green-100 text-green-800 text-xs font-medium mr-2 px-2.5 py-0.5 rounded">Available</span>
+                        <div class="relative max-h-max max-w-xs md:max-w-sm bg-white shadow rounded-lg  mb-2
+                         ">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor"
+                                class="absolute top-0 right-0 w-16 hover:cursor-pointer hover:scale-110 z-50">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M15 12H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" />
+                            </svg>
+                            <div class="transition duration-300 ease-in-out hover:shadow-lg hover:opacity-80">
+
+                                <a href="./pet_detail_shelter_view.html">
+                                    <div class="relative w-full h-56">
+                                        <img class="w-full h-full object-cover rounded-t-lg"
+                                            src="./resources/pets/cat.jpg" alt="" />
                                     </div>
+                                </a>
+                                <div class="p-5 flex flex-col">
+                                    <div class="flex justify-between">
+                                        <a href="#">
+                                            <h5 class="mb-2 text-xl font-semibold tracking-tight text-gray-900">Betsy
+                                            </h5>
+                                        </a>
+                                        <div>
+                                            <span
+                                                class="bg-green-100 text-green-800 text-xs font-medium mr-2 px-2.5 py-0.5 rounded">Available</span>
+                                        </div>
+                                    </div>
+                                    <p class="text-medium text-gray-700">
+                                        Male &#8226 12 months </p>
+                                    <p class="text-medium text-gray-700">
+                                        Siberian </p>
+                                    <p class="text-medium text-gray-700">
+                                        Toronto Adoption Center </p>
+                                    <p class="text-xs mt-2  text-gray-700">
+                                        December 29, 2022 </p>
                                 </div>
-                                <p class="text-medium text-gray-700">
-                                    Male &#8226 12 months </p>
-                                <p class="text-medium text-gray-700">
-                                    Siberian </p>
-                                <p class="text-medium text-gray-700">
-                                    Toronto Adoption Center </p>
-                                <p class="text-xs mt-2  text-gray-700">
-                                    December 29, 2022 </p>
                             </div>
                         </div>
 
                         <!-- Card 4 -->
-                        <div class="max-h-max max-w-xs md:max-w-sm bg-white shadow rounded-lg mb-2
-                                    transition duration-300 ease-in-out hover:shadow-lg hover:opacity-80">
-                            <a href="./pet_detail.html">
-                                <div class="relative w-full h-56">
-                                    <img class="w-full h-full object-cover rounded-t-lg"
-                                         src="./resources/pets/australian_terrier.png" alt="" />
-                                </div>
-                            </a>
-                            <div class="p-5 flex flex-col">
-                                <div class="flex justify-between">
-                                    <a href="#">
-                                        <h5 class="mb-2 text-xl font-semibold tracking-tight text-gray-900">Buddy</h5>
-                                    </a>
-                                    <div>
-                                        <span class="bg-green-100 text-green-800 text-xs font-medium mr-2 px-2.5 py-0.5 rounded">Available</span>
+                        <div class="relative max-h-max max-w-xs md:max-w-sm bg-white shadow rounded-lg  mb-2
+                           ">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor"
+                                class="absolute top-0 right-0 w-16 hover:cursor-pointer hover:scale-110 z-50">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M15 12H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" />
+                            </svg>
+                            <div class="transition duration-300 ease-in-out hover:shadow-lg hover:opacity-80">
+
+                                <a href="./pet_detail_shelter_view.html">
+                                    <div class="relative w-full h-56">
+                                        <img class="w-full h-full object-cover rounded-t-lg"
+                                            src="./resources/pets/australian_terrier.png" alt="" />
                                     </div>
+                                </a>
+                                <div class="p-5 flex flex-col">
+                                    <div class="flex justify-between">
+                                        <a href="#">
+                                            <h5 class="mb-2 text-xl font-semibold tracking-tight text-gray-900">Buddy
+                                            </h5>
+                                        </a>
+                                        <div>
+                                            <span
+                                                class="bg-green-100 text-green-800 text-xs font-medium mr-2 px-2.5 py-0.5 rounded">Available</span>
+                                        </div>
+                                    </div>
+                                    <p class="text-medium text-gray-700">
+                                        Male &#8226 3 years </p>
+                                    <p class="text-medium text-gray-700">
+                                        Australian Terrier </p>
+                                    <p class="text-medium text-gray-700">
+                                        Toronto Adoption Center </p>
+                                    <p class="text-xs mt-2  text-gray-700">
+                                        December 28, 2022 </p>
                                 </div>
-                                <p class="text-medium text-gray-700">
-                                    Male &#8226 6 years </p>
-                                <p class="text-medium text-gray-700">
-                                    Australian Terrier</p>
-                                <p class="text-medium text-gray-700">
-                                    Toronto Adoption Center </p>
-                                <p class="text-xs mt-2  text-gray-700">
-                                    December 28, 2022 </p>
                             </div>
                         </div>
                     </div>
