--- a/P1/src/shelter_detail_shelter_view.html
+++ b/P1/src/shelter_detail_shelter_view.html
@@ -318,7 +318,7 @@
                 <!-- Card 1 -->
                 <div class="max-h-max max-w-xs md:max-w-sm bg-white shadow rounded-lg mb-2
                             transition duration-300 ease-in-out hover:shadow-lg hover:opacity-80">
-                    <a href="./pet_detail.html">
+                    <a href="./pet_detail_shelter_view.html">
                         <div class="relative w-full h-56">
                             <img class="w-full h-full object-cover rounded-t-lg"
                                 src="./resources/pets/DunDun2.png" alt="" />
@@ -347,7 +347,7 @@
                 <!-- Card 2 -->
                 <div class="max-h-max max-w-xs md:max-w-sm bg-white shadow rounded-lg mb-2
                             transition duration-300 ease-in-out hover:shadow-lg hover:opacity-80">
-                    <a href="./pet_detail.html">
+                    <a href="./pet_detail_shelter_view.html">
                         <div class="relative w-full h-56">
                             <img class="w-full h-full object-cover rounded-t-lg"
                                 src="./resources/pets/boston_terrier.jpg" alt="" />
@@ -376,7 +376,7 @@
                 <!-- Card 3 -->
                 <div class="max-h-max max-w-xs md:max-w-sm bg-white shadow rounded-lg mb-2
                             transition duration-300 ease-in-out hover:shadow-lg hover:opacity-80">
-                    <a href="./pet_detail.html">
+                    <a href="./pet_detail_shelter_view.html">
                         <div class="relative w-full h-56">
                             <img class="w-full h-full object-cover rounded-t-lg"
                                 src="./resources/pets/cat.jpg" alt="" />
@@ -405,7 +405,7 @@
                 <!-- Card 4 -->
                 <div class="max-h-max max-w-xs md:max-w-sm bg-white shadow rounded-lg mb-2
                             transition duration-300 ease-in-out hover:shadow-lg hover:opacity-80">
-                    <a href="./pet_detail.html">
+                    <a href="./pet_detail_shelter_view.html">
                         <div class="relative w-full h-56">
                             <img class="w-full h-full object-cover rounded-t-lg"
                                 src="./resources/pets/australian_terrier.png" alt="" />
