--- a/P1/src/login_error_shelter.html
+++ b/P1/src/login_error_shelter.html
@@ -14,7 +14,7 @@
     <header>
         <nav class="z-10 w-full md:fixed">
             <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-            <a href="../main/main.html" class="flex items-center">
+            <a href="./main.html" class="flex items-center">
                 <span class="self-center text-3xl font-bold whitespace-nowrap">Pet Pal</span>
             </a>
             </div>
@@ -54,14 +54,16 @@
                             <p id="outlined_error_help" class="mt-2 text-xs text-red-600"><span class="font-medium">Coudln't find your Pet Pal Account</span></p>    
                         </div>
 
-                        <button type="submit" class="w-full text-white bg-blue-600 hover:bg-primary-700 hover:bg-gray-900 :ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-medium px-5 py-2.5 text-center">
-                            <a href="../main/main_after_login_shelter.html">
+                        <!-- <button type="submit" class="w-full text-white bg-blue-600 hover:bg-primary-700 hover:bg-gray-900 :ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-medium px-5 py-2.5 text-center"> -->
+                        <div>
+                            <a href="./main_after_login_shelter.html" type="button" class="w-full text-white bg-blue-600 hover:bg-primary-700 hover:bg-gray-900 :ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-medium px-5 py-2.5 text-center">
                             Log In
                             </a>
-                        </button>
+                        </div>
+                        <!-- </button> -->
                         
                         <p class="text-sm font-medium text-gray-500">
-                            Don't have an account? <a href="./seeker_signup.html" class="font-medium text-blue-600 hover:underline">Sign Up</a>
+                            Don't have an account? <a href="./first_shelter_signup.html" class="font-medium text-blue-600 hover:underline">Sign Up</a>
                         </p>
                     </form>
                 </div>
