Make details consistent with card

--- a/P1/src/pet_creation.html
+++ b/P1/src/pet_creation.html
@@ -138,7 +138,7 @@
                         </div>
 
                         <h5 class="w-1/2 text-right">
-                            October 12th, 2023
+                            December 31st, 2022
                         </h5>
                     </div>
 
@@ -147,8 +147,8 @@
                         <p class="font-bold mr-4"> Gender</p>
                         <div class="text-base mb-4">
                             <select data-te-select-init data-te-select-placeholder="Select Gender">
+                                <option value="1">Male</option>
                                 <option value="2">Female</option>
-                                <option value="3">Male</option>
                             </select>
                             <label data-te-select-label-ref>Gender</label>
                         </div>
