--- a/P1/src/pet_detail_shelter_view.html
+++ b/P1/src/pet_detail_shelter_view.html
@@ -118,18 +118,18 @@
                         </div>
 
                         <h5 class="w-1/2 text-right">
-                            October 10th, 2023
+                            December 31st, 2022
                         </h5>
                     </div>
 
                     <hr class="my-2">
                     <div class="flex items-center justify-center" style="justify-content: space-between;">
                         <p class="font-bold mr-4"> Gender</p>
-                        <p> Female </p>
+                        <p> Male </p>
                     </div>
                     <div class="flex items-center justify-center" style="justify-content: space-between;">
                         <p class="font-bold mr-4"> Age</p>
-                        <p> 2 years </p>
+                        <p> 3 years </p>
                     </div>
                     <div class="flex items-center justify-center" style="justify-content: space-between;">
                         <p class="font-bold mr-4"> Breed</p>
