--- a/P1/src/pet_detail_editable.html
+++ b/P1/src/pet_detail_editable.html
@@ -155,7 +155,7 @@
                         </div>
 
                         <h5 class="w-1/2 text-right">
-                            October 10th, 2023
+                            December 31st, 2022
                         </h5>
                     </div>
 
@@ -164,8 +164,8 @@
                         <p class="font-bold mr-4"> Gender</p>
                         <div class="text-base mb-4">
                             <select data-te-select-init>
-                                <option value="1">Female</option>
-                                <option value="2">Male</option>
+                                <option value="1">Male</option>
+                                <option value="2">Female</option>
                             </select>
                             <label data-te-select-label-ref>Gender</label>
                         </div>
@@ -174,7 +174,7 @@
                     <div class="flex items-center justify-center" style="justify-content: space-between;">
                         <p class="font-bold mr-4"> Age</p>
                         <div class="relative mb-4" data-te-input-wrapper-init>
-                            <input type="text" required value="2 years"
+                            <input type="text" required value="3 years"
                                 class="peer block min-h-[auto] w-full rounded border-0 bg-transparent px-3 py-[0.32rem] leading-[1.6] outline-none transition-all duration-200 ease-linear focus:placeholder:opacity-100 peer-focus:text-primary data-[te-input-state-active]:placeholder:opacity-100 motion-reduce:transition-none dark:text-neutral-200 dark:placeholder:text-neutral-200 dark:peer-focus:text-primary [&:not([data-te-input-placeholder-active])]:placeholder:opacity-0"
                                 id="age_input" placeholder="Example label">
                             <label for="age_input"
