--- a/P1/src/seeker_signup_error.html
+++ b/P1/src/seeker_signup_error.html
@@ -14,7 +14,7 @@
     <header>
         <nav class="z-10 w-full md:fixed">
             <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-            <a href="../main/main.html" class="flex items-center">
+            <a href="./main.html" class="flex items-center">
                 <span class="self-center text-3xl font-bold whitespace-nowrap">Pet Pal</span>
             </a>
             </div>
@@ -80,10 +80,12 @@
                             <label for="remember" class="ml-2 text-sm font-medium text-gray-900 ">I agree with the <a href="#" class="text-blue-600 hover:underline">terms and conditions</a>.</label>
                         </div>
                         
-                        <button type="submit" class="text-white mb-5 bg-blue-700 hover:bg-gray-900 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-medium w-full sm:w-full px-5 py-2.5 text-center">
-                            <a href="../main/main_after_login.html">Sign Up</a> 
+                        <!-- <button type="submit" class="text-white mb-5 bg-blue-700 hover:bg-gray-900 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-medium w-full sm:w-full px-5 py-2.5 text-center"> -->
+                        <div>
+                            <a href="./main_after_login.html" type="button" class="text-white mb-5 bg-blue-700 hover:bg-gray-900 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-medium w-full sm:w-full px-5 py-2.5 text-center">Sign Up</a> 
+                        </div>
                             <!-- when get rid of the a tag inside button, will not proceed to main after login -->
-                        </button>
+                        <!-- </button> -->
 
                         <div class="mb-2">
                             <p class="text-sm font-medium text-gray-500">
