--- a/P1/src/pet_adoption.html
+++ b/P1/src/pet_adoption.html
@@ -85,22 +85,21 @@
                             <div class="mb-4">
                                 <div class="grid-cols-1 sm:grid md:grid-cols-1">
                                     <input type="street address 1" name="street address 1" id="street address 1"
-                                        value="1000 Bay Street"
                                         class="bg-white-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 mb-4"
                                         placeholder="Street Address 1" required>
                                     <input type="street address 2" name="street address 2" id="street address 2"
                                         class="bg-white-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 mb-4"
                                         placeholder="Street Address 2" required>
                                     <div class="grid-cols-2 sm:grid md:grid-cols-1 gap-4">
-                                        <input type="city" name="city" id="city" value="Toronto"
+                                        <input type="city" name="city" id="city"
                                             class="bg-white-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 mb-4"
                                             placeholder="City" required>
-                                        <input type="province" name="province" id="province" value="Ontario"
+                                        <input type="province" name="province" id="province"
                                             class="bg-white-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 mb-4"
                                             placeholder="Province" required>
                                     </div>
                                     <div class="grid-cols-2 sm:grid md:grid-cols-1 gap-4">
-                                        <input type="postal code" name="postal code" id="postal code" value="M5S 3A8"
+                                        <input type="postal code" name="postal code" id="postal code"
                                             class="bg-white-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 mb-4"
                                             placeholder="Postal Code" required>
                                         <select id="country"
@@ -221,11 +220,12 @@
                 </a>
             </section>
 
-            <script src="./footer_seeker.js"></script>
         </div>
     </div>
+    <script src="./footer_seeker.js"></script>
     </div>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.1/flowbite.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/tw-elements/dist/js/tw-elements.umd.min.js"></script>
 
 </body>
 
