Make search filter dates consistent

--- a/P1/src/search_filter.html
+++ b/P1/src/search_filter.html
@@ -202,7 +202,7 @@
                     </div>
                 </div>
 
-                <div class="mt-4 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 ">
+                <div class="gap-4 mt-4 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 ">
                 <!-- Card 1 -->
                 <div class="max-h-max max-w-xs md:max-w-sm bg-white shadow rounded-lg mb-2
                             transition duration-300 ease-in-out hover:shadow-lg hover:opacity-80">
@@ -224,11 +224,11 @@
                         <p class="text-medium text-gray-700">
                             Male &#8226 3 years </p>
                         <p class="text-medium text-gray-700">
-                            Boston Terrier </p>
+                            Golden Doodle </p>
                         <p class="text-medium text-gray-700">
                             Toronto Adoption Center </p>
                         <p class="text-xs mt-2  text-gray-700">
-                            December 28, 2022 </p>
+                            December 31, 2022 </p>
                     </div>
                 </div>
 
@@ -257,7 +257,7 @@
                         <p class="text-medium text-gray-700">
                             Toronto Adoption Center </p>
                         <p class="text-xs mt-2  text-gray-700">
-                            December 28, 2022 </p>
+                            December 30, 2022 </p>
                     </div>
                 </div>
 
@@ -282,11 +282,11 @@
                         <p class="text-medium text-gray-700">
                             Male &#8226 3 years </p>
                         <p class="text-medium text-gray-700">
-                            Boston Terrier </p>
+                            Australian Terrier </p>
                         <p class="text-medium text-gray-700">
                             Toronto Adoption Center </p>
                         <p class="text-xs mt-2  text-gray-700">
-                            December 31, 2022 </p>
+                            December 28, 2022 </p>
                     </div>
                 </div>
                 </div>
