fixed link and add main page for shelter login

--- a/P1/src/main_after_login.html
+++ b/P1/src/main_after_login.html
@@ -118,7 +118,7 @@
                         </li>
                     </ul>
                     <div class="py-1">
-                        <a href="./main.html" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Sign out</a>
+                        <a href="./main_for_shelter_login.html" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Sign out</a>
                     </div>
                 </div>
                 <!-- hamburger -->
