--- a/P1/src/login_error_shelter.html
+++ b/P1/src/login_error_shelter.html
@@ -51,7 +51,7 @@
                                 <input type="password" id="outlined_error_pw" aria-describedby="outlined_error_help" class="block px-2.5 py-2.5  w-full text-sm text-gray-900 bg-transparent rounded-lg border-1.5 appearance-none border-red-600 focus:outline-none focus:ring-0 focus:border-red-600 peer" placeholder=" " />
                                 <!-- <label for="outlined_error_pw" class="absolute text-sm text-red-600 duration-300 transform -translate-y-4 scale-75 top-2 z-10 origin-[0] bg-white px-2 peer-focus:px-2 peer-placeholder-shown:scale-100 peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:top-1/2 peer-focus:top-2 peer-focus:scale-75 peer-focus:-translate-y-4 left-1">Wrong Password</label> -->
                             </div>
-                            <p id="outlined_error_help" class="mt-2 text-xs text-red-600"><span class="font-medium">Coudln't find your Pet Pal Account</span></p>    
+                            <p id="outlined_error_help" class="mt-2 text-xs text-red-600"><span class="font-medium">Wrong Password!</span></p>    
                         </div>
 
                         <!-- <button type="submit" class="w-full text-white bg-blue-600 hover:bg-primary-700 hover:bg-gray-900 :ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-medium px-5 py-2.5 text-center"> -->
