--- a/P1/src/login_shelter.html
+++ b/P1/src/login_shelter.html
@@ -46,7 +46,7 @@
 
                         <!-- <button type="submit" class="w-full text-white bg-blue-600 hover:bg-primary-700 hover:bg-gray-900 :ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-medium px-5 py-2.5 text-center"> -->
                             <div>
-                                <a href="./main_after_login_shelter.html" type="button" class="w-full text-white bg-blue-600 hover:bg-primary-700 hover:bg-gray-900 :ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-medium px-5 py-2.5 text-center">Log In</a>
+                                <a href="./login_error_shelter.html" type="button" class="w-full text-white bg-blue-600 hover:bg-primary-700 hover:bg-gray-900 :ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-medium px-5 py-2.5 text-center">Log In</a>
                             </div>
                         <!-- </button> -->
                         
