Fix formatting and information consistency for application lists

--- a/P1/src/list_seeker_applications.html
+++ b/P1/src/list_seeker_applications.html
@@ -19,24 +19,28 @@
 
 
 
-    <div class="min-h-screen bg-gray-100 my-4">
+    <div class="min-h-screen bg-gray-100 py-4">
         <!-- Some hacky flex boxing -->
         <div class="flex justify-center mx-4">
             <div class="flex flex-col content-center   w-full md:w-3/4 lg:w-1/2">
                 <div class="flex flex-row items-center justify-between  mt-4 mb-2 ">
                     <div>
-                        <h1 class="mb-4 text-2xl font-extrabold leading-none tracking-tight text-gray-900 md:text-4xl lg:text-4xl "> Adoption Applications </h1>
+                        <h1
+                            class="mb-4 text-2xl font-extrabold leading-none tracking-tight text-gray-900 md:text-4xl lg:text-4xl ">
+                            Adoption Applications </h1>
                     </div>
                     <div class="flex items-center gap-2">
                         <label for="sort" class="block  text-sm font-medium text-gray-900 dark:text-white">Sort</label>
                         <!-- TODO switch me to a button that is clickable to reverse order, that is sufficient here -->
-                        <select id="sort" class="bg-white border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
+                        <select id="sort"
+                            class="bg-white border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
                             <option selected>Most Recent</option>
                             <option value="US">Least recent </option>
                         </select>
                     </div>
                 </div>
-                <ul class="w-full text-sm  font-medium text-gray-900 bg-white border border-gray-200 rounded-lg dark:bg-gray-700 dark:border-gray-600 dark:text-white">
+                <ul
+                    class="w-full text-sm  font-medium text-gray-900 bg-white border border-gray-200 rounded-lg dark:bg-gray-700 dark:border-gray-600 dark:text-white">
 
                     <li class="w-full border-b border-gray-200  dark:border-gray-600">
                         <!-- content of application card -->
@@ -46,7 +50,8 @@
                                     <h5 class="mb-2 text-xl font-semibold tracking-tight text-gray-900">DunDun</h5>
                                 </div>
                                 <div>
-                                    <span class="bg-green-100 text-green-800 text-sm font-medium mr-2 px-2.5 py-0.5 rounded dark:bg-green-900 dark:text-green-300">Available</span>
+                                    <span
+                                        class="bg-green-100 text-green-800 text-sm font-medium mr-2 px-2.5 py-0.5 rounded dark:bg-green-900 dark:text-green-300">Available</span>
 
 
                                 </div>
@@ -55,7 +60,8 @@
                                 <div class="flex flex-row items-center justify-start gap-4">
 
                                     <a href="pet_detail_error.html">
-                                        <img data-popover-target="popover-default" class="w-20 h-20 rounded-full" src="resources/pets/DunDun2.png" alt="Rounded avatar">
+                                        <img data-popover-target="popover-default" class="w-20 h-20 rounded-full"
+                                            src="resources/pets/DunDun2.png" alt="Rounded avatar">
                                     </a>
                                     <div class="flex flex-col items-start justify-center">
                                         <p class="text-sm font-medium  text-gray-900 truncate dark:text-white">
@@ -66,21 +72,24 @@
                                         </p>
                                         <div>
                                             <p class="text-sm text-gray-500 truncate dark:text-gray-400">
-                                                Created: Oct 10, 2023</p>
+                                                Created: Oct 12, 2023</p>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="flex justify-self-end "> <a href="user_application.html" type="button" class="text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700"> View application</a>
+                                <div class="flex justify-self-end "> <a href="user_application.html" type="button"
+                                        class="text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700">
+                                        View application</a>
                                 </div>
                             </div>
 
                     </li>
                 </ul>
-                        </div>
             </div>
         </div>
     </div>
-    <div data-popover id="popover-default" role="tooltip" class="absolute z-10 invisible inline-block w-64 text-sm text-gray-500 transition-opacity duration-300 bg-white border border-gray-200 rounded-lg shadow-sm opacity-0 dark:text-gray-400 dark:border-gray-600 dark:bg-gray-800">
+    </div>
+    <div data-popover id="popover-default" role="tooltip"
+        class="absolute z-10 invisible inline-block w-64 text-sm text-gray-500 transition-opacity duration-300 bg-white border border-gray-200 rounded-lg shadow-sm opacity-0 dark:text-gray-400 dark:border-gray-600 dark:bg-gray-800">
         <div class="max-h-max max-w-xs md:max-w-sm bg-white shadow rounded-lg 
                             transition duration-300 ease-in-out hover:shadow-lg hover:opacity-80">
             <a href="./pet_detail.html">
@@ -94,7 +103,8 @@
                         <h5 class="mb-2 text-xl font-semibold tracking-tight text-gray-900">DunDun</h5>
                     </a>
                     <div>
-                        <span class="bg-green-100 text-green-800 text-xs font-medium mr-2 px-2.5 py-0.5 rounded">Available</span>
+                        <span
+                            class="bg-green-100 text-green-800 text-xs font-medium mr-2 px-2.5 py-0.5 rounded">Available</span>
                     </div>
                 </div>
                 <p class="text-medium text-gray-700">
@@ -135,19 +145,26 @@
             </div>
             <hr class="my-6 border-gray-200 sm:mx-auto lg:my-6" />
             <div class="sm:flex sm:items-center sm:justify-between">
-                <span class="text-sm text-gray-500 sm:text-center">© 2023 <a href="./main_after_login.html" class="hover:underline">
+                <span class="text-sm text-gray-500 sm:text-center">© 2023 <a href="./main_after_login.html"
+                        class="hover:underline">
                         PetPal™</a>. All Rights Reserved.
                 </span>
                 <div class="flex mt-4 space-x-5 sm:justify-center sm:mt-0">
                     <a href="#" class="text-gray-500 hover:text-gray-900">
-                        <svg class="w-4 h-4 md:w-5 md:h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 8 19">
-                            <path fill-rule="evenodd" d="M6.135 3H8V0H6.135a4.147 4.147 0 0 0-4.142 4.142V6H0v3h2v9.938h3V9h2.021l.592-3H5V3.591A.6.6 0 0 1 5.592 3h.543Z" clip-rule="evenodd" />
+                        <svg class="w-4 h-4 md:w-5 md:h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                            fill="currentColor" viewBox="0 0 8 19">
+                            <path fill-rule="evenodd"
+                                d="M6.135 3H8V0H6.135a4.147 4.147 0 0 0-4.142 4.142V6H0v3h2v9.938h3V9h2.021l.592-3H5V3.591A.6.6 0 0 1 5.592 3h.543Z"
+                                clip-rule="evenodd" />
                         </svg>
                         <span class="sr-only">Facebook page</span>
                     </a>
                     <a href="#" class="text-gray-500 hover:text-gray-900">
-                        <svg class="w-4 h-4 md:w-5 md:h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 17">
-                            <path fill-rule="evenodd" d="M20 1.892a8.178 8.178 0 0 1-2.355.635 4.074 4.074 0 0 0 1.8-2.235 8.344 8.344 0 0 1-2.605.98A4.13 4.13 0 0 0 13.85 0a4.068 4.068 0 0 0-4.1 4.038 4 4 0 0 0 .105.919A11.705 11.705 0 0 1 1.4.734a4.006 4.006 0 0 0 1.268 5.392 4.165 4.165 0 0 1-1.859-.5v.05A4.057 4.057 0 0 0 4.1 9.635a4.19 4.19 0 0 1-1.856.07 4.108 4.108 0 0 0 3.831 2.807A8.36 8.36 0 0 1 0 14.184 11.732 11.732 0 0 0 6.291 16 11.502 11.502 0 0 0 17.964 4.5c0-.177 0-.35-.012-.523A8.143 8.143 0 0 0 20 1.892Z" clip-rule="evenodd" />
+                        <svg class="w-4 h-4 md:w-5 md:h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                            fill="currentColor" viewBox="0 0 20 17">
+                            <path fill-rule="evenodd"
+                                d="M20 1.892a8.178 8.178 0 0 1-2.355.635 4.074 4.074 0 0 0 1.8-2.235 8.344 8.344 0 0 1-2.605.98A4.13 4.13 0 0 0 13.85 0a4.068 4.068 0 0 0-4.1 4.038 4 4 0 0 0 .105.919A11.705 11.705 0 0 1 1.4.734a4.006 4.006 0 0 0 1.268 5.392 4.165 4.165 0 0 1-1.859-.5v.05A4.057 4.057 0 0 0 4.1 9.635a4.19 4.19 0 0 1-1.856.07 4.108 4.108 0 0 0 3.831 2.807A8.36 8.36 0 0 1 0 14.184 11.732 11.732 0 0 0 6.291 16 11.502 11.502 0 0 0 17.964 4.5c0-.177 0-.35-.012-.523A8.143 8.143 0 0 0 20 1.892Z"
+                                clip-rule="evenodd" />
                         </svg>
                         <span class="sr-only">Twitter page</span>
                     </a>
