fixed link issue

--- a/P1/src/shelter_signup_error.html
+++ b/P1/src/shelter_signup_error.html
@@ -14,7 +14,7 @@
     <header>
         <nav class="z-10 w-full md:fixed">
             <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-            <a href="../main/main.html" class="flex items-center">
+            <a href="./main.html" class="flex items-center">
                 <span class="self-center text-3xl font-bold whitespace-nowrap">Pet Pal</span>
             </a>
             </div>
@@ -116,7 +116,7 @@
                                     </div>
                                     <p class="mb-4 text-lg font-semibold text-gray-900">Successfully Signed Up!</p>
                                     <button data-modal-toggle="successModal" type="button" class="py-2 px-3 text-sm font-medium text-center text-white rounded-lg bg-blue-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300">
-                                        <a href="../main/main_after_login_shelter.html">Continue</a>
+                                        <a href="./main_after_login_shelter.html">Continue</a>
                                     </button>
                                 </div>
                             </div>
