changed font color and sizing for title

--- a/P1/src/pet_adoption.html
+++ b/P1/src/pet_adoption.html
@@ -41,7 +41,7 @@
             <section id="application">
 
                 <form action="https://postman-echo.com/post" class="form mb-4 m-3">
-                    <div class=" flex text-4xl justify-center p-3 text-gray-900" style="color: red;">
+                    <div class=" flex text-3xl font-semibold justify-center p-3 text-gray-900">
                         Adoption Application, Contract, and Waiver
                     </div>
                     <div class="bg-white border border-gray-200 p-1 rounded-lg" style="max-width: 100%;">
