Enable new password changes

--- a/P1/src/seeker_update.html
+++ b/P1/src/seeker_update.html
@@ -199,11 +199,11 @@
                         </div>
                         <div class="mb-4">
                             <label for="password" class="block mb-2 text-sm font-medium text-gray-900">New Password</label>
-                            <input type="password" id="password" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" value="" disabled>
+                            <input type="password" id="password" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" value="" >
                         </div>
                         <div class="mb-3">
                             <label for="confirm_password" class="block mb-2 text-sm font-medium text-gray-900">Confirm new password</label>
-                            <input type="password" id="confirm_password" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" value="" disabled>
+                            <input type="password" id="confirm_password" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" value="" >
                         </div>
 
         <div class="mb-4">
